# wasm_snake

./: .gitignore  Cargo.toml  Dockerfile  Dockerfile.node  README.md  index.html  package-lock.json  package.json
src/: canvas.rs  constants.rs  events.rs  lib.rs  snake.rs
